@@ -1648,6 +1648,11 @@ Description: Factor lu_site procfs stats into a separate function.
 Details    : Separate lu_site stats printing code into a separate function
 	     that can be reused on a client.
 
+Severity   : minor
+Bugzilla   : 16450
+Description: Constify instances of struct {lu,dt,md}_device_operations.
+Details    : Constify instances of struct {lu,dt,md}_device_operations.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
